--- a/app/views/goethe/competitions/edit.html
+++ b/app/views/goethe/competitions/edit.html
@@ -71,19 +71,19 @@
 
                         <div class="form-group">
                             <label for="">Hashtag</label>
-                            <input  type="text" class="form-control" data-ng-model="torneo.hashtag" placeholder="#slam123">
+                            <input  type="text" class="form-control" data-ng-model="torneo.hashtag" placeholder="#goethe123">
                         </div>
                         <div class="form-group">
                             <label for="">Facebook ID</label>
-                            <input  type="text" class="form-control" data-ng-model="torneo.facebook" placeholder="slam.argentina">
+                            <input  type="text" class="form-control" data-ng-model="torneo.facebook" placeholder="goethe.argentina">
                         </div>
                         <div class="form-group">
                             <label for="">Twitter ID</label>
-                            <input  type="text" class="form-control" data-ng-model="torneo.twitter" placeholder="@slam.argentina">
+                            <input  type="text" class="form-control" data-ng-model="torneo.twitter" placeholder="@goethe.argentina">
                         </div>
                         <div class="form-group">
                             <label for="">Instagram ID</label>
-                            <input  type="text" class="form-control" data-ng-model="torneo.instagram" placeholder="@islam.insta">
+                            <input  type="text" class="form-control" data-ng-model="torneo.instagram" placeholder="@igoethe.insta">
                         </div>
                         <div class="form-group">
                             <label for="">Youtube Id</label>
