--- a/app/views/goethe/participants/edit.html
+++ b/app/views/goethe/participants/edit.html
@@ -81,6 +81,24 @@
                                 ui-wave
                                 data-ng-click="revert()"
                         >Cancelar</button>
+
+                        <span
+                            ng-if="participant.id"
+                          class="btn btn-danger btn-w-md pull-right"
+                          mwl-confirm
+                          ui-wave
+                          title="Atención!"
+                          message="Desea eliminar al orador?"
+                          confirm-text="Confirmar"
+                          cancel-text="Cancelar"
+                          placement="top"
+                          on-confirm="remove()"
+                          on-cancel="cancelClicked = true"
+                          confirm-button-type="danger"
+                          cancel-button-type="default">
+                            Eliminar
+                        </span>
+
                         </div>
 
                     </form>
