--- a/app/views/goethe/participants/edit.html
+++ b/app/views/goethe/participants/edit.html
@@ -51,23 +51,23 @@
 
                         <div class="form-group">
                             <label for="">Email</label>
-                            <input  type="text" class="form-control" required data-ng-model="participant.email" >
+                            <input  type="text" class="form-control" data-ng-model="participant.email" >
                         </div>
                         <div class="form-group">
                             <label for="">Sitio Web</label>
-                            <input  type="text" class="form-control" required data-ng-model="participant.google" >
+                            <input  type="text" class="form-control" data-ng-model="participant.google" >
                         </div>
                         <div class="form-group">
                             <label for="">Facebook</label>
-                            <input  type="text" class="form-control" required data-ng-model="participant.facebook" >
+                            <input  type="text" class="form-control" data-ng-model="participant.facebook" >
                         </div>
                         <div class="form-group">
                             <label for="">Twitter</label>
-                            <input  type="text" class="form-control" required data-ng-model="participant.twitter" >
+                            <input  type="text" class="form-control" data-ng-model="participant.twitter" >
                         </div>
                         <div class="form-group">
                             <label for="">Instagram</label>
-                            <input  type="text" class="form-control" required data-ng-model="participant.instagram" >
+                            <input  type="text" class="form-control" data-ng-model="participant.instagram" >
                         </div>
 
 
